[tool.poetry]
name = "self-driving-car"
version = "0.1.0"
description = ""
authors = ["Nam Thai <nam.thai.dev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = "1.23.2"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
keras = "^2.12.0"
scikit-learn = "^1.2.2"
tensorflow = "^2.12.0"
flask = "^2.3.2"
python-socketio = "4.2.1"
eventlet = "^0.33.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
